[package]
name = "open-ltap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bytes = "1.12.0"
chrono = "0.4.45"
crc32c = "0.6.8"
deltalake = { version = "0.32.4", features = ["s3"] }
futures-util = "0.3.32"
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
